tests/NormalTests/paczka1/fuzzy1/80240318.err
Error in line 5: VArBT A435 93,3
Error in line 36: A91 S800 48,5
